--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="client.js">
+
+</script>
+
 </head>
 <body>
 
