--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="client.js">
-
-</script>
 
 </head>
 <body>
-
-
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -19,6 +13,9 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
+    
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="client.js"></script>
 
 </body>
 </html>
